dil sistemi tr olarak değişti, form elementleri yerleştirildi.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,13 @@
     <title>Selam</title>
 </head>
 <body>
-    
+    <h1>Selamlar </h1>
+    <input type="range" name="" id="">
+    <input type="text" name="" id="">
+    <input type="password" name="" id="">
+    <img src="https://machinelearningworkshop.com/svg/switch2.svg" alt="">
+    <p>This paragraph has <em>some</em> 
+        <strong>strongly emphasized</strong>
+        content</p>
 </body>
 </html>
